convert participant rows to nested/repeating components

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <script defer src="https://cdn.jsdelivr.net/npm/vue">
         </script>
 -->
+        <script defer
+            src="https://cdn.jsdelivr.net/npm/ramda/dist/ramda.js"
+            crossorigin="anonymous"
+            integrity="sha384-rKmeYxOQCAwkiEDMEDRGhK9EDXaEssbVFm7tXtZxMveWR8nYSjjsrevOsUZVpcPm"
+        >
+        </script>
+        <!-- TODO - bundle 3rd party libraries into a single minimized bundle -->
         <script defer src="app.js" >
         </script>
         <!-- TODO - script bundling/minification -->
